css for employee profile - issue with white space on small screen

--- a/WinterVacationWork/AdminInterface/adminInterface.css
+++ b/WinterVacationWork/AdminInterface/adminInterface.css
@@ -1,3 +1,11 @@
+body{
+  background: url('Image/background.png') no-repeat top center;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  border: 1px solid red;
+}
 #createEmployeeWindow{
     display: none;
 }
